更新shrio校验